# dataAnalysisPlatform

./: .gitignore  README.md
arr/: checkGhostDetectors.Rmd  checkGhostDetectors.html  checkGhostDetectors.nb.html  escapedMuons.Rmd  geantTrackStepReader.py  trackingActionReader.py  tryReadGallery.Rmd  tryReadGallery.nb.html
arr/checkGhostDetectors/: checkGhostDetectors.nb.html
arr/escapedMuons/: escapedMuons.Rmd  escapedMuons.nb.html  everything_volNames.csv  ghostDetectorReader.py  gmon.out  holdReneeStuff.nb.html  noKicker_volNames.csv  noQuads_volNames.csv  vol1.csv
arr/escapedMuons_20170313/: GeantTrackReader.py  escapedMuons.Rmd  holdReneeStuff.Rmd  (+6 more)
bash/: dataAccess.ipynb
fromRBlogs/: purrr.Rmd  purrr.nb.html  storecClosings.Rmd  storecClosings.nb.html  worstDrivers.Rmd  worstDrivers.nb.html
galleryGm2R/: CMakeLists.txt  DESCRIPTION  NAMESPACE
galleryGm2R/R/: inline.R
galleryGm2R/inst/include/: CaloArtRecordDF.hh  GalleryTimer.hh  GhostDetectorArtRecordDF.hh  TrackingActionArtRecordDF.hh
galleryGm2R/src/: GalleryTimer.cpp
galleryLArR/: DESCRIPTION  NAMESPACE
gm2appSpace/: gm2appUsers.txt  gm2appspace.Rmd  gm2appspace.nb.html  user.space
julia/: HeistPrototype.ipynb  omega_a_check-Copy1.ipynb  omega_a_check.html  omega_a_check.ipynb  try_gallery.ipynb  tryingHeist.ipynb
tryingRcpp/: arr.Rmd  caloDF.cpp  galleryLoad.py  galleryTimer.hh  gm2Gallery1.Rmd  gm2Gallery1.nb.html  gm2Gallery2.Rmd  gm2Gallery2.nb.html  lar.cc  larsoftGallery1.Rmd  larsoftGallery1.nb.html  reticulate.Rmd  reticulate.nb.html  timesTwo.cpp  tryRcpp.Rmd  tryRcpp.nb.html
(+19 files in other folders)
